src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Сlothes</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Сlock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Family__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Earphones</fullName>
                </value>
                <value>
                    <fullName>Speakers</fullName>
                </value>
                <value>
                    <fullName>Batteries</fullName>
                </value>
                <value>
                    <fullName>Jackets</fullName>
                </value>
                <value>
                    <fullName>T-Shirts</fullName>
                </value>
                <value>
                    <fullName>Shirts</fullName>
                </value>
                <value>
                    <fullName>Sweaters</fullName>
                </value>
                <value>
                    <fullName>Socks</fullName>
                </value>
                <value>
                    <fullName>Mechanical Watches</fullName>
                </value>
                <value>
                    <fullName>Quartz Watches</fullName>
                </value>
                <value>
                    <fullName>Digital Watches</fullName>
                </value>
                <value>
                    <fullName>Sports Watches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Description_not_empty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Description__c )</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Enter Description value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_is_nor_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Enter product name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Price_is_not_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT( Price__c ))</errorConditionFormula>
        <errorDisplayField>Price__c</errorDisplayField>
        <errorMessage>Enter Price</errorMessage>
    </validationRules>
</CustomObject>